Tue Mar  9 16:19:09 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkpathbar.c (struct _ButtonData): Encapsulate all of the
	information about a button in a struct instead of ugly
	g_object_set_data.
	(gtk_path_bar_size_request): Use ButtonData.
	(gtk_path_bar_update_slider_buttons): ditto
	(gtk_path_bar_size_allocate): ditto
	(gtk_path_bar_remove): ditto
	(gtk_path_bar_forall): ditto
	(gtk_path_bar_scroll_down): ditto
	(gtk_path_bar_clear_buttons): ditto
	(button_clicked_cb): ditto.  Also, add an ignore_changes variable
	(button_data_free): destroy ButtonData
	(update_button_appearance): Use ButtonData
	(make_directory_button): ditto
	(gtk_path_bar_check_parent_path): ditto
	(_gtk_path_bar_set_path): ditto

2004-03-09  Federico Mena Quintero  <federico@ximian.com>

	Fix #136533.

	* gtk/gtkfilechooserdefault.c (shortcuts_reload_icons): New
	function.
	(check_icon_theme): New helper function, installs a handler for
	changes in the icon theme.
	(gtk_file_chooser_default_style_set): Use check_icon_theme().
	(gtk_file_chooser_default_screen_changed): Use check_icon_theme().
	(gtk_file_chooser_default_dispose): Disconnect from GtkSettings.
	(change_icon_theme): New function, updates impl->icon_size and
	reloads the icons.
	(struct _GtkFileChooserDefault): New field settings_signal_id.
	(struct _GtkFileChooserDefault): New field icon_size.
	(shortcuts_insert_path): Use impl->icon_size.
	(list_icon_data_func): Likewise.

2004-03-09  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c (get_file_info): Handle the returned
	parent_path being NULL.  Fixes #136662.

2004-03-09  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c (shortcuts_drag_data_received_cb):
	Stop the emission so that GtkTreeView's handler won't try to poke
	the filter model.  Fixes #136127.

Tue Mar  9 13:49:14 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkstyle.c (gtk_paint_polygon): Fix 
	g_return_if_fail() that was checking draw_shadow.