@@ -1,3 +1,9 @@
+Tue Mar  9 23:09:46 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkoptionmenu.c (gtk_option_menu_init): Avoid centering 
+	the label that is reparented from the menuitem.  (#136614, Dennis
+	Cranston)
+
 Tue Mar  9 16:19:09 2004  Jonathan Blandford  <jrb@gnome.org>
 
 	* gtk/gtkpathbar.c (struct _ButtonData): Encapsulate all of the
